# sfn-ng

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  docker.yaml  github-release.yaml  publish.yaml
src/: main.rs  utils.rs
