[package]
name = "sfn-ng"
version = "0.1.0"
authors = ["Patrick Robinson <patrick.robinson@bertelsmann.de>"]
edition = "2018"
license-file = "LICENSE"
description = "Rust replacement for sfn with more features"
hompage = "https://github.com/arvatoaws-labs/sfn-ng"
documentation = "https://github.com/arvatoaws-labs/sfn-ng"
repository = "https://github.com/arvatoaws-labs/sfn-ng"
readme = "README.md"
# keywords
# categories
exclude = [
  "Dockerfile",
  ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "=0.44.0"
rusoto_cloudformation = "=0.44.0"
rusoto_s3 = "=0.44.0"
rusoto_sts = "=0.44.0"
tokio = { version = "=0.2.22", features = ["full"] }
clap = ">=3.0.0-beta.1"
colored = ">=1.9.3"
itertools = ">=0.9.0"
serde_json = ">=1.0"
chrono = ">=0.4"
time = ">=0.1"
async-recursion = ">=0.3.1"
whoami = ">=0.9.0"