[package]
name = "sfn-ng"
version = "0.2.19"
authors = ["Patrick Robinson <patrick.robinson@bertelsmann.de>", "Stephan Telahr <stephan.telahr@bertelsmann.de>"]
edition = "2018"
license = "GPL-3.0"
description = "Rust replacement for sfn with more features"
hompage = "https://github.com/arvatoaws-labs/sfn-ng"
documentation = "https://github.com/arvatoaws-labs/sfn-ng"
repository = "https://github.com/arvatoaws-labs/sfn-ng"
readme = "README.md"
# keywords
# categories
exclude = [
  "Dockerfile",
  ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "=0.46.0"
rusoto_cloudformation = "=0.46.0"
rusoto_ec2 = "=0.46.0"
rusoto_s3 = "=0.46.0"
rusoto_sts = "=0.46.0"
tokio = { version = ">=0.3.0", features = ["full"] }
clap = ">=3.0.0-beta.1"
colored = ">=1.9.3"
itertools = ">=0.9.0"
serde_json = ">=1.0"
chrono = ">=0.4"
time = ">=0.2.27"
async-recursion = ">=0.3.2"
whoami = ">=0.9.0"
string_morph = ">=0.1.0"
walkdir = ">=2.3.1"
convert_case = ">=0.4.0"
